--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "movies",
+  "name": "myfavmovies",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://puckyeu.github.io/Movies/",
+  "homepage": "https://puckyeu.github.io/MyFavMovies/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
