--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
       "react-hooks"
     ],
     "rules": {
-      "react-hooks/exhaustive-deps": 0
+      "react-hooks/exhaustive-deps": 0,
+      "array-callback-return": 0
     }
   },
   "browserslist": {
