--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myfavmovies",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://puckyeu.github.io/MyFavMovies/",
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -15,7 +15,6 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.11.0",
-    "gh-pages": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
